<resources>
    <!--TELA PRINCIPAL -->
    <string name="titulo_app">SmartTasks</string>
    <string name="botao_cadastro">Cadastro de Tarefas</string>
    <string name="botao_listar">Listagem de Tarefas</string>
    <string name="botao_compartilhar">Compartilhar Link</string>
    <string name="botao_analise">Análise Inteligente</string>
    <string name="botao_sobre">Sobre Nós</string>

    <!-- CADASTRO TAREFA -->
    <string name="app_name">prova-SmartTasks</string>
    <string name="cadastro_tarefa">Cadastro de Tarefa</string>
    <string name="titulo_tarefa">Título:</string>>
    <string name="descricao_tarefa">Descricao:</string>
    <string name="data_tarefa">Insira a Data Da Tarefa</string>
    <string name="botao_salvar">Salvar</string>>
    <string name="botao_voltar">Voltar</string>
    <string name="resultado_cadastro_de_tarefa">Nova Tarefa:</string>

    <!--LISTAGEM TAREFA -->
    <string name="listagem_tarefa">Listagem Tarefa</string>
    <string name="botao_detalhar">Detalhar</string>

    <!--DETALHAR TAREFA -->
    <string name="detalhar_tarefa">Detalhar Tarefa</string>
    <string name="botao_voltar_listagem">Voltar para Listagem</string>

    <!-- COMPARTILHAR LINKS -->
    <string name="compartilhar_link">Compartilhar Link</string>
    <string name="btn_link_ifrs">IFRS - Campus Rolante</string>
    <string name="btn_link_git">Projeto - GitHub</string>

    <!-- COMPARTILHAR LINKS -->
    <string name="analise_inteligente">Análise Inteligente</string>

    <!-- SOBRE NÓS -->
    <string name="sobre_nos">Sobre Nós</string>
    <string name="nome_raissa">✨Raissa Maciel Lima</string>
    <string name="nome_gabriel">⚙️Gabriel Felipe Rost</string>
    <string name="descricao_sobre_nos">Somos estudantes do curso de Análise e Desenvolvimento de Sistemas no IFRS – Campus Rolante, atualmente no 5º semestre. Este aplicativo foi desenvolvido com fins educacionais.</string>

</resources>