<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@color/superior"
                android:text="@string/titulo_app"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonCadastroTarefas"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:paddingLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:drawableLeft="@drawable/plus_solid"
                android:background="@drawable/borda_redonda"
                android:onClick="AbrirTelaCadastroTarefa"
                android:text="@string/botao_cadastro"/>

            <Button
                android:id="@+id/buttonListagemTarefas"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:paddingLeft="30dp"
                android:drawableLeft="@drawable/list_solid"
                android:text="@string/botao_listar"
                android:onClick="AbrirTelaListagemTarefas"
                android:background="@drawable/borda_redonda"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/buttonCompartilharLink"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:paddingLeft="30dp"
                android:drawableLeft="@drawable/link_solid"
                android:text="@string/botao_compartilhar"
                android:onClick="AbrirTelaCompartilharLink"
                android:background="@drawable/borda_redonda"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/buttonAnaliseInteligente"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:paddingLeft="30dp"
                android:drawableLeft="@drawable/lightbulb_solid"
                android:text="@string/botao_analise"
                android:background="@drawable/borda_redonda"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/buttonSobre"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:onClick="AbrirTelaSobreNos"
                android:background="@drawable/borda_redonda"
                android:drawableLeft="@drawable/face_smile_solid"
                android:paddingLeft="30dp"
                android:text="@string/botao_sobre" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>