<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    tools:context=".CadastroTarefa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewCadastroTarefa"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:background="@color/superior"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/cadastro_tarefa"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textViewTitulo"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/titulo_tarefa" />

            <EditText
                android:id="@+id/editTextTitulo"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textViewDescricao"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/descricao_tarefa" />

            <EditText
                android:id="@+id/editTextDescricao"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/data_tarefa"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/textViewAvisoCadastroTarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#A0D683"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/buttonCadastrar"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:text="@string/botao_salvar"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:onClick="SalvarTarefa"
            android:background="@drawable/borda_redonda"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/buttonVoltarCadastro"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:text="@string/botao_voltar"
            android:onClick="AbrirTelaPrincipal"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/borda_redonda"
            android:textAlignment="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>