<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    tools:context=".CompartilharLink">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@color/superior"
                android:gravity="center"
                android:text="@string/compartilhar_link"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonLinkGit"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/borda_redonda"
                android:onClick="linkGit"
                android:text="@string/btn_link_git" />

            <Button
                android:id="@+id/buttonLinkIFRS"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/borda_redonda"
                android:onClick="linkCampus"
                android:text="@string/btn_link_ifrs" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonVoltarCompartilhar"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:onClick="AbrirTelaPrincipal"
                android:background="@drawable/borda_redonda"
                android:text="@string/botao_voltar" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>