<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    tools:context=".ListagemTarefa">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@color/superior"
                android:gravity="center"
                android:text="@string/listagem_tarefa"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayoutListagem"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:paddingTop="10dp"
            android:background="@drawable/borda_linear_layout"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewNomeListagem"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:layout_gravity="left"
                android:padding="3dp"
                android:text="Nome da Tarefa:" />

            <Button
                android:id="@+id/buttonDetalhar"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:background="@drawable/borda_redonda"
                android:text="@string/botao_detalhar" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonVoltarListagem"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:onClick="AbrirTelaPrincipal"
                android:background="@drawable/borda_redonda"
                android:text="@string/botao_voltar" />

        </LinearLayout>

<!--        <ListView-->
<!--            android:id="@+id/recyclerViewLista"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent" />-->


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>